fix(Player): layout issue with audio menu

--- a/src/routes/Player/AudioMenu/AudioMenu.less
+++ b/src/routes/Player/AudioMenu/AudioMenu.less
@@ -1,5 +1,4 @@
 .audio-menu {
-    height: 25rem;
     display: flex;
     flex-direction: row;
 
@@ -23,6 +22,7 @@
             align-self: stretch;
             overflow-y: auto;
             padding: 0 1rem;
+            padding-bottom: 0.5rem;
 
             .option {
                 display: flex;
